--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,8 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+vite.config.js
 node_modules
-vite.config.json
 package.json
 package-lock.json
 dist
@@ -25,3 +25,4 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
